--- a/server/package.json
+++ b/server/package.json
@@ -21,6 +21,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.4",
+    "morgan": "^1.10.0",
     "validator": "^13.7.0"
   }
 }
