--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,8 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "styled-components": "^5.3.5",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "recharts": "^2.1.10"
   },
   "scripts": {
     "start": "react-scripts start",
